# dave-gray-django-for-beginners

./: .mise.toml  Makefile  pyproject.toml
src/posts/: urls.py  views.py
src/posts/migrations/: 0001_initial.py
src/posts/templates/posts/: post_page.html  posts_list.html
src/project/: settings.py  urls.py  views.py
src/static/js/: main.js
src/templates/: about.html  home.html  layout.html
