[tool.poetry]
name = "django-dave-gray"
version = "0.1.0"
description = ""
authors = ["Vladimir Bredikhin <brutal.v4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
